<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/media_folder"
            android:text="@string/media_folder_label"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/media_folder"
            android:layout_marginLeft="10dp"
            android:id="@+id/folder_name"
            android:text="@string/media_folder"/>
    <LinearLayout
            android:layout_below="@id/folder_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_centerHorizontal="true"
            android:id="@+id/media_controls">
        <ImageButton
                android:id="@+id/play_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/play_icon"
                android:contentDescription="@string/play_action"/>
        <ImageButton
                android:id="@+id/pause_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/pause_icon"
                android:contentDescription="@string/pause_action"/>
        <ImageButton
                android:id="@+id/stop_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/stop_icon"
                android:contentDescription="@string/stop_action"/>
    </LinearLayout>
    <TextView
            android:id="@+id/song_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/media_controls"
            android:layout_alignParentLeft="true"
            android:layout_margin="10dp"
            android:text="@string/no_song"/>
    <ProgressBar
            android:id="@+id/song_progress"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/song_name"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"/>
</RelativeLayout>

